gatekeeper/library/flux-enforce-sa/samples/flux-enforce-sa/example_kust_kubeconfig.yaml
apiVersion: kustomize.toolkit.fluxcd.io/v1
kind: Kustomization
metadata:
  name: space-templatng-boostrap
  namespace: amer-west
spec:
  interval: 1m
  sourceRef:
    kind: GitRepository
    name:  space-templatng-boostrap
  path: ./templated-spaces/project/setup
  prune: true
  kubeConfig:
    secretRef:
      name: amer-west-kubeconfig
  timeout: 1m
